@@ -539,11 +539,28 @@
 		lv2:default 180.0 ;
 		lv2:minimum 3.6 ;
 		lv2:maximum 360.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 63 ;
+		lv2:symbol "DEL1_BPMSYNC" ;
+		lv2:name "Delay BPM (sync)" ;
+		lv2:portProperty lv2:toggled ;
+		lv2:default 0.0 ;
+		lv2:minimum 0.0 ;
+		lv2:maximum 1.0 ;
+	], [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 64 ;
+		lv2:symbol "DEL1_BPMHOST" ;
+		lv2:name "Delay BPM (host)" ;
+		lv2:default 180.0 ;
+		lv2:minimum 3.6 ;
+		lv2:maximum 360.0 ;
 		lv2:designation lv2time:beatsPerMinute ;
 	] ;
 	lv2:port [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 63 ;
+		lv2:index 65 ;
 		lv2:symbol "DYN1_COMPRESS" ;
 		lv2:name "Dynamic Compressor" ;
 		lv2:portProperty lv2:toggled ;
@@ -552,7 +569,7 @@
 		lv2:maximum 1.0 ;
 	], [
 		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 64 ;
+		lv2:index 66 ;
 		lv2:symbol "DYN1_LIMITER" ;
 		lv2:name "Dynamic Limiter" ;
 		lv2:portProperty lv2:toggled ;
